--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -2,7 +2,7 @@
 \lyxformat 345
 \begin_document
 \begin_header
-\textclass report
+\textclass scrreprt
 \use_default_options true
 \language spanish
 \inputencoding auto
