--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -828,10 +828,17 @@ key "HinrichSchutze2009"
 \end_layout
 
 \begin_layout Quotation
+\begin_inset Quotes eld
+\end_inset
+
 La recuperación de la información es encontrar material (usualmente documentos)
  de una naturaleza no estructurada (por lo general, texto) que satisface
  una necesidad de información en colecciones grandes (que pueden estar guardadas
  en computadoras).
+\begin_inset Quotes erd
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -2291,6 +2298,19 @@ sistemas de filtración de información
 ento de éste y otros usuarios similares .
 \end_layout
 
+\begin_layout Standard
+En las siguientes secciones se presentan los dos grandes tipos de sistemas
+ de recomendación: los 
+\emph on
+basados en contenido
+\emph default
+ y los de 
+\emph on
+filtrado colaborativo
+\emph default
+.
+\end_layout
+
 \begin_layout Subsubsection
 Sistemas de recomendación proactivos
 \end_layout
@@ -2329,11 +2349,7 @@ otro sistema que se puede considerar de este tipo, se vale también de las
 \end_layout
 
 \begin_layout Subsection
-Tipos de sistemas de recomendación
-\end_layout
-
-\begin_layout Subsubsection
-Filtrado basado en el contenido
+Recomendación con filtrado basado en el contenido
 \begin_inset CommandInset label
 LatexCommand label
 name "sub:Filtrado-contenido"
@@ -2360,6 +2376,9 @@ key "Pazzani2007"
 \end_layout
 
 \begin_layout Quotation
+\begin_inset Quotes eld
+\end_inset
+
 [Los sistemas de recomendación basados en el contenido] sugieren un artículo
  basado en una descripción del mismo y un perfil de los intereses del usuario.
  [...] Tienen en común (1) un medio para describir los elementos que se recomendarí
@@ -2373,6 +2392,10 @@ status collapsed
 Numeración del autor
 \end_layout
 
+\end_inset
+
+
+\begin_inset Quotes erd
 \end_inset
 
 
@@ -2586,16 +2609,12 @@ key "Baudisch1999"
 
 \end_layout
 
-\begin_layout Plain Layout
-
-\end_layout
-
 \end_inset
 
 
 \end_layout
 
-\begin_layout Paragraph
+\begin_layout Subsubsection
 Componentes
 \end_layout
 
@@ -2642,7 +2661,7 @@ Hecho el símil, se procede ahora a discutir los detalles y el rol de los
 \end_layout
 
 \begin_layout Paragraph
-Representación de los componentes:
+Representación de los artículos:
 \end_layout
 
 \begin_layout Standard
@@ -2835,7 +2854,7 @@ www.mendeley.com
  artículos de ella).
 \end_layout
 
-\begin_layout Paragraph
+\begin_layout Subparagraph
 El componente de recomendación
 \end_layout
 
@@ -2870,7 +2889,7 @@ key "Fleischman2003"
 .
 \end_layout
 
-\begin_layout Paragraph
+\begin_layout Subsubsection
 Limitaciones
 \end_layout
 
@@ -2886,8 +2905,8 @@ es en tópicos de interés para el usuario.
  para refinar la recomendación.
 \end_layout
 
-\begin_layout Subsubsection
-Filtrado colaborativo
+\begin_layout Subsection
+Recomendación con filtrado colaborativo
 \begin_inset CommandInset label
 LatexCommand label
 name "sub:Filtrado-colaborativo."
@@ -2918,9 +2937,16 @@ key "Segaran2007"
 \end_layout
 
 \begin_layout Quotation
+\begin_inset Quotes eld
+\end_inset
+
 Busca en un grupo grande de personas y encuentra un conjunto más pequeño
  cuyos gustos se asemejen a los del usuario.
  Mira qué otras cosas ellos favorecen y las combina en una lista de sugerencias.
+\begin_inset Quotes erd
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -2935,8 +2961,15 @@ key "Fox2010"
 \end_layout
 
 \begin_layout Quotation
+\begin_inset Quotes eld
+\end_inset
+
 Es un método basado en el ambiente social, usado para proponer artículos
  que usuarios que piensan de manera similar favorecen.
+\begin_inset Quotes erd
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -3239,7 +3272,7 @@ key "Grcar2005"
  Algunos de estos algoritmos se discuten a continuación.
 \end_layout
 
-\begin_layout Paragraph
+\begin_layout Subsubsection
 Métodos de filtrado colaborativo
 \end_layout
 
@@ -3663,7 +3696,7 @@ predecir
  eligiendo así aquellos que el usuario preferiría.
 \end_layout
 
-\begin_layout Paragraph
+\begin_layout Minisec
 Filtrado colaborativo basado en memoria
 \end_layout
 
@@ -3746,7 +3779,7 @@ Así, se puede hablar del porcentaje de similitud entre personas.
 \end_layout
 
 \begin_layout Paragraph
-Similitud de coseno
+Similitud de coseno:
 \end_layout
 
 \begin_layout Standard
@@ -3774,7 +3807,7 @@ key "Garcia"
 \end_layout
 
 \begin_layout Paragraph
-Coeficiente de correlación de Pearson
+Coeficiente de correlación de Pearson:
 \end_layout
 
 \begin_layout Standard
@@ -3923,7 +3956,7 @@ key "Sarwar2001"
 .
 \end_layout
 
-\begin_layout Paragraph
+\begin_layout Minisec
 Filtrado colaborativo basado en modelos
 \end_layout
 
@@ -3964,7 +3997,7 @@ key "Mortensen2007"
 .
 \end_layout
 
-\begin_layout Paragraph
+\begin_layout Subsubsection
 Limitaciones
 \begin_inset CommandInset label
 LatexCommand label
@@ -4051,7 +4084,7 @@ key "Schein2002"
 \end_layout
 
 \begin_layout Subsection
-Sistemas de recomendación orientados al conocimiento
+Recomendación orientada al conocimiento
 \end_layout
 
 \begin_layout Standard
