--- a/bibtex_references/Zotero - Zotero Library.bib
+++ b/bibtex_references/Zotero - Zotero Library.bib
@@ -12,6 +12,55 @@ url = {http://scielo.unam.mx/pdf/cys/v8n4/v8n4a3.pdf},
 volume = {8},
 year = {2005}
 }
+@inproceedings{Haav2001,
+abstract = {             In order to solve the problem of information overkill on the web
+current information retrieval tools need to be improved. Much more
+"intelligence" should be embedded to search tools to manage effectively search,
+retrieval, filtering and presenting relevant information. This can be done by
+concept-based (or ontology driven) information retrieval, which is considered as
+one of the high-impact technologies for the next ten years. Nevertheless, most
+of commercial products of search and retrieval category do not report about
+concept-based search features. The paper provides an overview of concept-
+based information retrieval techniques and software tools currently available as
+prototypes or commercial products. Tools are evaluated using feature
+classification, which incorporates general characteristics of tools and their
+Information retrieval features.
+},
+annote = {Explora distintas herramientas para IR basada en conceptos. Me sirve para la investigaci\'{o}n relacionada.
+----------
+            Concepts can be extracted from the text by categorisation. Crucial in thismodel is existence of a conceptual structure for mapping descriptions of informationobjects to concepts used in a query. If keywords or noun-phrases are used, then theyshould be mapped to concepts in a conceptual structure.},
+author = {Haav, H.M. and Lubi, T.L.},
+booktitle = {5th East-European Conference, ADBIS},
+file = {:home/lfborjas/Lebrixen/Fase\_I/Bibliografia/Miscelanea/A Survey of Concept-based Information Retrieval Tools
+                    on the Web
+.pdf:pdf},
+keywords = {Information Retrieval,Related Research},
+mendeley-tags = {Information Retrieval,Related Research},
+pages = {29–41},
+publisher = {Citeseer},
+title = {{A survey of concept-based information retrieval tools on the web}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.109.6927\&amp;rep=rep1\&amp;type=pdf},
+year = {2001}
+}
+@inproceedings{Bassu2003,
+author = {Bassu, D. and Behrens, C.},
+booktitle = {Proceedings of the 3rd SIAM International Conference on Data Mining (Text Mining Workshop)},
+file = {:home/lfborjas/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/7133/custom.html:html},
+publisher = {San Francisco, CA},
+title = {{Distributed LSI: scalable concept-based information retrieval with high semantic resolution}},
+url = {http://cchen1.csie.ntust.edu.tw/students/2009/Distributed LSI Scalable Concept-based Information Retrieval with High Semantic Resolution.pdf},
+volume = {11},
+year = {2003}
+}
+@article{Dumais1988,
+address = {New York},
+author = {Dumais, ST and Furnas, GW and Landauer, TK and Deerwester, S},
+journal = {Proceedings of CHI},
+pages = {281--285},
+title = {{Using latent semantic analysis to improve information retrieval}},
+url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:Using+latent+semantic+analysis+to+improve+information+retrieval\#1},
+year = {1988}
+}
 @inproceedings{ThorstenBrants,
 abstract = {Many Natural Language Processing (NLP) techniques have been used in Information Re-
 trieval. The results are not encouraging. Simple methods (stopwording, porter-style stem-
