--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -1550,6 +1550,38 @@ retroalimentación
 \end_layout
 
 \begin_layout Subsection
+Modelos de recuperación de información
+\end_layout
+
+\begin_layout Standard
+El componente más importante de un sistema de IR, como ya se vio anteriormente,
+ es la consulta del usuario -la expresión de su necesidad de información.
+ En este apartado se presentan los distintos enfoques de implementación,
+ los cuales se pueden separar en dos grandes grupos: los basados en 
+\emph on
+palabras
+\emph default
+ y los basados en 
+\emph on
+conceptos.
+
+\emph default
+ Como ya se apuntó, los sistemas tradicionales parten de la premisa de que
+ las palabras que están en la consulta son suficientes para la búsqueda,
+ sin embargo, como se sabe, el lenguaje natural encierra 
+\emph on
+conceptos
+\emph default
+ que trascienden una mera instancia léxica, y por ello se presentarán también
+ técnicas que parten de la premisa de que la consulta sólo es una base semántica
+ para la búsqueda y que ésta se puede aumentar (ya sea mediante sinónimos
+ aportados por tesauros, búsquedas en ontologías o colecciones indizadas
+ por conceptos) o refinar (mediante la desambiguación de términos, por ejemplo).
+ En la figura [] se presenta una taxonomía de los modelos de recuperación
+ de información que se explorarán.
+\end_layout
+
+\begin_layout Subsection
 Evaluación de un sistema de recuperación de información.
 \end_layout
 
@@ -2205,36 +2237,6 @@ k
  De este subconjunto, entonces, se obtendrán los juicios de relevancia de
  los usuarios.
  
-\end_layout
-
-\begin_layout Section
-Implementación de sistemas de recuperación de información
-\end_layout
-
-\begin_layout Standard
-El componente más importante de un sistema de IR, como ya se vio anteriormente,
- es la consulta del usuario -la expresión de su necesidad de información.
- Se presentan los distintos enfoques de implementación, que se pueden separar
- en dos grandes grupos: los basados en 
-\emph on
-palabras
-\emph default
- y los basados en 
-\emph on
-conceptos.
-
-\emph default
- Como ya se apuntó, los sistemas tradicionales parten de la premisa de que
- las palabras que están en la consulta son suficientes para la búsqueda,
- sin embargo, como se sabe, el lenguaje natural encierra 
-\emph on
-conceptos
-\emph default
- que trascienden una mera instancia léxica, y por ello se presentarán también
- técnicas que parten de la premisa de que la consulta sólo es una base semántica
- para la búsqueda y que ésta se puede aumentar (ya sea mediante sinónimos
- aportados por tesauros o búsquedas en ontologías o colecciones indizadas
- por conceptos) o refinar (mediante la desambiguación de términos).
 \end_layout
 
 \begin_layout Section
